--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,38 @@
-/* add home page styles here */
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90px;
+}
+
+#countries {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.country {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 80%;
+}
+
+img {
+    width: 70%;
+    border-radius: 15%;
+}
+
+img:hover {
+    border: 2px solid chartreuse;
+}
+
+.country:hover {
+    color: chartreuse;
+}
+
+a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
