--- a/details/home.css
+++ b/details/home.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-family: 'UnifrakturMaguntia', cursive;
-    font-size: 3rem;
+    font-size: 2rem;
+    color: white;
 }
+
 
 body {
-    background-image: url('../assets/background.jpg');
+    background-image: url('../assets/detail-background.jpg');
+    color: white;
 }
 
-#countries {
+.about {
+    font-family: 'UnifrakturMaguntia', cursive;
     display: flex;
-    flex-direction: row;
+    flex-direction:column;
     align-items: center;
+    font-size: 3rem;
 }
 
 .country {
@@ -29,14 +31,23 @@ img {
     border-radius: 15%;
 }
 
-img:hover {
-    opacity: 50%;
+p {
+    font-size: 1.5rem;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 150px;
+    font-size: 1.5rem;
 }
 
 a {
     color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     text-decoration: none;
+}
+
+a:hover {
+    color: yellow;
 }
