--- a/styles/home.css
+++ b/styles/home.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+* {
+    font-family: 'UnifrakturMaguntia', cursive;
+}
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'UnifrakturMaguntia', cursive;
-    font-size: 3rem;
+    font-size: 50px;
 }
 
 body {
     background-image: url('../assets/background.jpg');
+    font-family: 'Roboto', sans-serif;
 }
 
 #countries {
@@ -34,7 +39,7 @@ img:hover {
 }
 
 a {
-    color: white;
+    color: black;
     display: flex;
     flex-direction: row;
     justify-content: center;
