--- a/details/home.css
+++ b/details/home.css
@@ -25,16 +25,33 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 img {
+    display: block;
     width: 50%;
     border-radius: 15%;
 }
 
+.overlay {
+    position: absolute;
+    top: 50%;
+    background: black;
+    color: goldenrod;
+    width: 50%;
+    transition: 0.75s ease-in;
+    padding: 20px;
+    text-align: center;
+    opacity: 0;
+}
+
+.country:hover .overlay {
+    opacity: 80%;
+}
+
 p {
-    font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 footer {
@@ -52,4 +69,5 @@ a {
 
 a:hover {
     color: yellow;
+    transition: .5s ease-in;
 }
